// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiHideFor l is rendered 1`] = `
<span
  class="eui-hideFor--l"
/>
`;

exports[`EuiHideFor m is rendered 1`] = `
<span
  class="eui-hideFor--m"
/>
`;

exports[`EuiHideFor renders and copies classes 1`] = `
<div
  class="eui-hideFor--xs"
>
  Child
</div>
`;

exports[`EuiHideFor renders wraps chilren in a span 1`] = `
<span
  class="eui-hideFor--xs"
>
  Child
</span>
`;

exports[`EuiHideFor s is rendered 1`] = `
<span
  class="eui-hideFor--s"
/>
`;

exports[`EuiHideFor xl is rendered 1`] = `
<span
  class="eui-hideFor--xl"
/>
`;

exports[`EuiHideFor xs is rendered 1`] = `
<span
  class="eui-hideFor--xs"
/>
`;
